--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+---------------------------------------------
+# содержимое файла .gitignore для IDEA
 *.iml
 .DS_Store/
 .idea/
 out/
+---------------------------------------------
