--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "connect-mongodb": "^1.1.5",
+    "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "^1.4.3",
     "cookieparser": "^0.1.0",
     "express": "^4.15.2",
     "express-session": "^1.15.3",
+    "mongoose": "^4.10.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   },
